@@ -1,0 +1,21 @@
+[General]
+background_color=#ff9e27
+blockquote_color=#1380d4
+cross_scheme_link_color=#0960a7
+external_link_color=#0e8fff
+external_link_prefix="\x21d2 "
+h1_color=#022f90
+h1_font="Sans Serif,20,-1,5,50,0,0,0,0,0"
+h2_color=#022f90
+h2_font="Sans Serif,15,-1,5,50,0,0,0,0,0"
+h3_color=#022f90
+h3_font="Sans Serif,12,-1,5,50,0,0,0,0,0"
+internal_link_color=#0e8fff
+internal_link_prefix="\x2192 "
+margins=55
+name=Orange
+preformatted_color=#000000
+preformatted_font="Source Code Pro,10,-1,5,50,0,0,0,0,0,Regular"
+standard_color=#000000
+standard_font="Fira Sans,10,-1,5,50,0,0,0,0,0,Regular"
+theme=0
