@@ -85,6 +85,10 @@ private slots:
 
     void on_preset_load_clicked();
 
+    void on_preset_import_clicked();
+
+    void on_preset_export_clicked();
+
 private:
     void reloadStylePreview();
 
